--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     ]
   },
   "devDependencies": {
-    "electron": "^38.3.0"
+    "concurrently": "^9.2.1",
+    "electron": "^38.3.0",
+    "wait-on": "^9.0.1"
   }
 }
