--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "labirintodosaber",
   "version": "0.1.0",
+  "main": "public/electron.js",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
